crates/filecommand-tui/tests/snapshots/snapshot_views__quick_filter_mini_status.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
assertion_line: 838
expression: row
---
╚════════════════ rep ═════════════════╝╚════════════ ..  UP--DIR ═════════════╝
