crates/filecommand-tui/tests/snapshots/snapshot_views__quick_view_sub_dir_indicator.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
╔═════════════ Quick view ═════════════╗╔════════ C:\Users\demo\right ═══3:04 PM
║                                      ║║Name↓        │ Size    Date    Time   ║
║                                      ║║docs         │ ▶SUB-DI                ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║              ▶SUB-DIR◄               ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
╚═══════════ docs  SUB-DIR ════════════╝╚═══════════ docs  SUB-DIR ════════════╝
C:\Users\demo\left>_                                                            
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
