crates/filecommand-tui/tests/snapshots/snapshot_views__quit_confirm_dialog_over_pulldown_menu.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
  Left     Files     Commands     Options     Right                             
║Name↓    ┌─────────────────────┐ime   ║║Name↓        │ Size    Date    Time   ║
║..       │ View             F3 │      ║║..           │ ▶UP--DI                ║
║docs     │ Edit             F4 │3:0   ║║docs         │ ▶SUB-DI 01-02-2 03:0   ║
║Cargo.tom│ Copy             F5 │3:0   ║║Cargo.toml   │ 612     01-02-2 03:0   ║
║readme.tx│ Rename/Move      F6 │3:0   ║║readme.txt   │ 12K     01-02-2 03:0   ║
║         │ Make directory   F7 │      ║║                                      ║
║         │ Delete           F8 │      ║║                                      ║
║         │ Attributes          │      ║║                                      ║
║         ├─────────────────────┤      ║║                                      ║
║         │ Select group  ┌─────────────────────────┐                          ║
║         │ Deselect group│ Quit FileCommand? (Y/N) │                          ║
║         │ Invert selecti└─────────────────────────┘                          ║
║         ├─────────────────────┤      ║║                                      ║
║         │ Quit            F10 │      ║║                                      ║
║         └─────────────────────┘      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
╚═══════════ docs  SUB-DIR ════════════╝╚════════════ ..  UP--DIR ═════════════╝
C:\Users\demo\left>_                                                            
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
