crates/filecommand-tui/tests/snapshots/snapshot_views__splash_nc_classic.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ╔══════════════════════════════════════════════╗                
                ║                                              ║                
                ║                 FileCommand                  ║                
                ║                Version 0.1.0                 ║                
                ║                                              ║                
                ║  Copyright (C) 2026 The FileCommand Authors  ║                
                ║ Inspired by the Norton Commander, 1986-1998  ║                
                ║                                              ║                
                ╚══════════════════════════════════════════════╝
