crates/filecommand-tui/tests/snapshots/snapshot_views__tab_strip_full_labels.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: strip_row
---
 1:ALPHA  2:BETA                        ║Name↓        │ Size    Date    Time   ║
