crates/filecommand-tui/tests/snapshots/snapshot_views__tab_strip_scrolled_with_markers.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: strip_row
---
◄ 6  7  8  9  ►
