crates/filecommand-tui/tests/snapshots/snapshot_views__tab_strip_truncated_labels.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: strip_row
---
 1:FIL…  2:B
