crates/filecommand-tui/tests/snapshots/snapshot_views__theme_picker_dialog_active_marked.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
assertion_line: 993
expression: text
---
╔═════════ C:\Users\demo\left ═════════╗╔════════ C:\Users\demo\right ═══3:04 PM
║Name↓        │ Size    Date    Time   ║║Name↓        │ Size    Date    Time   ║
║..           │ ▶UP--DI                ║║..           │ ▶UP--DI                ║
║docs         │ ▶SUB-DI 01-02-2 03:0   ║║docs         │ ▶SUB-DI 01-02-2 03:0   ║
║Cargo.toml   │ 612     01-02-2 03:0   ║║Cargo.toml   │ 612     01-02-2 03:0   ║
║readme.txt   │ 12K     01-02-2 03:0   ║║readme.txt   │ 12K     01-02-2 03:0   ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                             ╔════ Themes ═════╗                              ║
║                             ║  nc-classic     ║                              ║
║                             ║  nc-mono        ║                              ║
║                             ║* terminal-green ║                              ║
║                             ║  purple-lights  ║                              ║
║                             ║  yellow-storm   ║                              ║
║                             ║  inverted       ║                              ║
║                             ╚═════════════════╝                              ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
╚═══════════ docs  SUB-DIR ════════════╝╚════════════ ..  UP--DIR ═════════════╝
C:\Users\demo\left>_                                                            
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
